Fix .nicks.toggler is visible on small screens

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -434,7 +434,7 @@ div.goto-bottom a {
   div.messages { margin-right: 0; }
 
   .with-nick-list {
-    a.nicks.toggler { display: block; }
+    nav.bar a.nicks.toggler { display: block; }
     div.messages, footer form { margin-right: 0; }
     div.nicks.container { display: none; }
   }
